Moved hidden modal 200% left to avoid overlap when hidden

--- a/app/client/templates/sass/modules/_modal.scss
+++ b/app/client/templates/sass/modules/_modal.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	opacity: 0;
 	top: 0px;
-	left: -100%;
+	left: -200%;
 	width: 100%;
 	height: 100%;
 	transform: scale(1.2,1.2);
